[project]
name = "ComfyUI_KurtHokke_Nodes"
description = ""
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["black"]

[project.urls]
Repository = "https://github.com/KurtHokke/ComfyUI_KurtHokke_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kurthokke"
DisplayName = "ComfyUI_KurtHokke_Nodes"
Icon = ""
